@@ -46,7 +46,7 @@ pjava() {
             -XX:G1NewSizePercent=50 -XX:G1MaxNewSizePercent=80 \
             -XX:InitiatingHeapOccupancyPercent=10 \
             -XX:G1MixedGCLiveThresholdPercent=50 \
-            -XX:+AggressiveOpts -jar "$1"
+            -jar "$1"
     else
         echo "file not existing, trying out other jar files!"
         pjava ./*.jar
